--- a/app/src/components/Navbar/Navbar.module.css
+++ b/app/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,14 @@
 .logo {
-    border-radius: 50%;
+    border-radius: 25%;
     padding: 5px;
+
+    width: 50px;
+    height: 50px;
+}
+
+.newChat {
+    width: 25px;
+    height: 25px;
+
+    color: '#9785BA';
 }
