chat card component added

--- a/app/src/App.module.css
+++ b/app/src/App.module.css
@@ -1,7 +1,7 @@
 .appDesktop {
     width: 80%;
     height: 100vh;
-    background-color: "#f5f2fb";
+    background-color: #f5f2fb;
 }
 
 .appMobile {
